perl dep handling (diag)

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ rust:
 env:
   - PERL5LIB=~/perl5
 before_install:
-  - cpanm --local-lib=~/perl5 --quiet --installdeps --notest .
-  - ls -lR /home/travis/perl5
+  - cpanm --local-lib=~/lib/perl5 --quiet --installdeps --notest .
+  - ls -lR ~/
